# pong_game

./: README.md
install/: local_setup.sh  setup.sh
install/advanced_user_interface/include/advanced_user_interface/advanced_user_interface/msg/: point2.h  point2.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/advanced_user_interface/include/advanced_user_interface/advanced_user_interface/msg/detail/: point2__builder.hpp  point2__functions.c  point2__functions.h  point2__rosidl_typesupport_fastrtps_c.h  point2__rosidl_typesupport_fastrtps_cpp.hpp  point2__rosidl_typesupport_introspection_c.h  point2__rosidl_typesupport_introspection_cpp.hpp  point2__struct.h  point2__struct.hpp  point2__traits.hpp  point2__type_support.c  point2__type_support.cpp  point2__type_support.h
install/advanced_user_interface/share/advanced_user_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/advanced_user_interface/share/advanced_user_interface/cmake/: advanced_user_interfaceConfig-version.cmake  advanced_user_interfaceConfig.cmake  advanced_user_interface__rosidl_typesupport_cExport-noconfig.cmake  advanced_user_interface__rosidl_typesupport_cExport.cmake  advanced_user_interface__rosidl_typesupport_cppExport-noconfig.cmake  advanced_user_interface__rosidl_typesupport_cppExport.cmake  advanced_user_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  advanced_user_interface__rosidl_typesupport_introspection_cExport.cmake  advanced_user_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  advanced_user_interface__rosidl_typesupport_introspection_cppExport.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_advanced_user_interface__rosidl_generator_cExport-noconfig.cmake  export_advanced_user_interface__rosidl_generator_cExport.cmake  export_advanced_user_interface__rosidl_generator_cppExport.cmake  export_advanced_user_interface__rosidl_generator_pyExport-noconfig.cmake  export_advanced_user_interface__rosidl_generator_pyExport.cmake  export_advanced_user_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_advanced_user_interface__rosidl_typesupport_fastrtps_cExport.cmake  export_advanced_user_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_advanced_user_interface__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/advanced_user_interface/share/advanced_user_interface/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/advanced_user_interface/share/advanced_user_interface/msg/: Point2.idl  Point2.msg
install/advanced_user_interface/share/ament_index/resource_index/package_run_dependencies/: advanced_user_interface
install/advanced_user_interface/share/ament_index/resource_index/parent_prefix_path/: advanced_user_interface
install/advanced_user_interface/share/ament_index/resource_index/rosidl_interfaces/: advanced_user_interface
install/visualization_pkg/share/visualization_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/advanced_user_interface/: CMakeLists.txt
src/advanced_user_interface/include/advanced_user_interface/: light_position_detection.hpp
src/advanced_user_interface/launch/: advanced_user_interface.py
src/advanced_user_interface/src/: light_position_detection.cpp  light_position_detection_node.cpp
src/game_msgs/: CMakeLists.txt  package.xml
src/game_msgs/msg/: GameState.msg
src/pong_core/: CMakeLists.txt  package.xml
src/pong_core/include/pong_core/: collision_detection.hpp  game_controller.hpp  reflection.hpp  trajectory.hpp
src/pong_core/msg/: BallState.msg  BatsState.msg
src/pong_core/src/: collision_detection.cpp  fft_node.cpp  game_controller.cpp  game_controller_node.cpp  reflection.cpp  trajectory.cpp
src/user_interface/: CMakeLists.txt  package.xml
src/user_interface/src/: user_input_keyboard.cpp
src/visualization/: CMakeLists.txt  package.xml
src/visualization/include/: Pong_field.hpp  SDL2_UI.hpp
src/visualization/include/visualization/: game_render.hpp
src/visualization/src/: Pong_field.cpp  SDL2_UI.cpp  game_render.cpp  game_render_node.cpp  game_state_publisher_node.cpp  visualization.cpp  visualization_node.cpp
